# openDataStage

./: .gitignore  .pylintrc  README.md  effort.ipynb  main.ipynb  main.py  main2.ipynb  main2.py  main3.py  main4.py  pyproject.toml  test_processing.py  test_processing_integration.py
ACQUISITION FORGEAGE/: ESSAI_001.csv  ESSAI_002.csv  ESSAI_003.csv  ESSAI_004.csv  ESSAI_005.csv  ESSAI_006.csv  ESSAI_007.csv  ESSAI_011.csv  ESSAI_012.csv  ESSAI_013.csv  ESSAI_014.csv  ESSAI_015.csv  ESSAI_016.csv  ESSAI_017.csv  ESSAI_021.csv  ESSAI_022.csv  ESSAI_023.csv  ESSAI_024.csv  ESSAI_025.csv  ESSAI_026.csv  ESSAI_027.csv  ESSAI_031.csv  ESSAI_032.csv  ESSAI_033.csv  ESSAI_034.csv  ESSAI_035.csv  ESSAI_036.csv  ESSAI_037.csv  ESSAI_041.csv  ESSAI_042.csv  ESSAI_043.csv  ESSAI_044.csv  ESSAI_045.csv  ESSAI_046.csv  ESSAI_047.csv  ESSAI_051.csv  ESSAI_052.csv  ESSAI_053.csv  ESSAI_054.csv  ESSAI_055.csv  (+54 more)
AXE_DU_TEMPS/: AXE_TEMPS.csv  ESSAI_1_3_6.csv
